added and styled buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 <div class="container-fluid">
     <div class="row row-1">
-    <div class="col-3 bg-success" id="column-order-2">
+    <div class="col-3" id="column-order-2">
         <div class="col">
         <h4>Leader Board:</h4>
         <ul>
@@ -41,7 +41,7 @@
                </div>
                </div>
                
-      <div class="col-3 bg-success align-text-center" id="column-order-1">
+      <div class="col-3 align-text-center" id="column-order-1">
           <div class="col mobile-template">
                     <h4>Scores:</h4>
                     <ul>
@@ -56,18 +56,18 @@
     </div>
   </div>
   <div class="row row-3">
-    <div class="col my-col-bottom-left bg-success">
-        <ul>
-            <li>Start</li>
-            <li>Difficulty</li>
-            <li>Create a player</li>
+    <div class="col my-col-bottom-left">
+        <ul>            
+            <li><button class="btn btn-primary btn-left" type="submit">Start</button></li>
+            <li><button class="btn btn-primary btn-left" type="submit">Difficulty</button></li>
+            <li><button class="btn btn-primary btn-left" type="submit">Create a player</button></li>
         </ul>
     </div>
-        <div class="col my-col-bottom-right bg-success">
+        <div class="col my-col-bottom-right">
             <ul>
-                <li>Rules</li>
-                <li>Choose a player</li>
-                <li>Create a player</li>
+            <li><button class="btn btn-primary btn-right" type="submit">Rules</button></li>
+            <li><button class="btn btn-primary btn-right" type="submit">Choose a player</button></li>
+            <li><button class="btn btn-primary btn-right" type="submit">Leaderboard</button></li>
             </ul>
     </div>
         </div>
