added time delay to 'start' button. Easier to start

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                     <li><p>You have to repeat blinked colors in the same sequences.</p></li>
                     <li><p>+1 point - for each finished sequence, -1 point - for made mistake.</p></li>
                     <li><p>You can't start before computer finish to blink sequence.</p></li>
+                    <li><p>After you press start button game will start in 1 seccond. Pay attention!</p></li>
                     <li><p>Choose one of free difficulty levels:</p>
                     <ol>
                         <li>Easy - Slowest game speed.</li>
