fixed loacal.storage issue, wasn't saving all inputs, just the last one

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         <div class="form-group">
                             <label for="exampleFormControlSelect2">Choose a player:</label>
                             <select class="form-control" id="exampleFormControlSelect1">
+                                <ul id="myList"></ul>
                                 
                                 
                               </select>
