changed function name onchange=val() to onchange=chosePlayer()

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleFormControlSelect2">Choose a player:</label>
-                            <select class="form-control" onchange="val()" id="exampleFormControlSelect1" > 
+                            <select class="form-control" onchange="chosePlayer()" id="exampleFormControlSelect1" > 
                                 <option hidden disabled selected value>  </option>                                                          
                               </select>
                           </div>
