used unique arrays to create top three high scores in the leader board and current's player highest score

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="col-3" id="column-order-2">
         <div class="col">
         <h4>Leader Board:</h4>
-        <ul>
-            <li></li>
+        <ul id="topThree">
+            
         </ul>
         <h4>Player:</h4>
         <h4 id="testingUpdate"></h4>
@@ -58,6 +58,7 @@
                     <h5 id="difficulty"></h5>                                   
                 </ul>
                     <h4>Highest Scores:</h4>
+                    <h5 id="highScore"></h5>
                     
                     </div>
                 </div>
