now difficulty level is reacting directly and changing as requested. Blinking speed is changing as difficulty levels goes harder

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                         </div>
                         <div class="form-group level_form">
                           <label for="exampleFormControlSelect1">Level:</label>
-                          <select class="form-control" id="exampleFormControlSelect2">
+                          <select class="form-control" onchange="dif()" id="exampleFormControlSelect2">
+                            <option hidden disabled selected value></option> 
                             <option>Easy</option>
                             <option>Medium</option>
                             <option>Hard</option>
