fixed issue after wrong answer player couldn't start game when  pressing start button, because of every push counted as wrong answer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="row row-3">
     <div class="col my-col-bottom-left">
         <ul>            
-            <li><button class="btn btn-primary btn-left btn-start" type="submit">Start</button></li>
+            <li><button class="btn btn-primary btn-left btn-start-game" type="submit">Start</button></li>
             <li><button class="btn btn-primary btn-left btnDiff" type="submit">Difficulty</button></li>
             <li><button class="btn btn-primary btn-left btnCreate" type="submit">Create a player</button></li>
         </ul>
