--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>   
 
 <div class="modal-container-2" id="modal-container-2" tabindex="-1" role="dialog">
-    <div class="modal" id="modal">
+    <div class="modal" id="modal-2">
         <button class="close-btn-rules" id="close"><i class="fa fa-times"></i></button>
         <div class="modal-content">
             <div class="header">
@@ -148,6 +148,25 @@
                 </ol>
             </li>   
             <li id="no-style-button"><button class="btn btn-primary btn-left " id= "modal_button_rules"  type="submit">Close</button>
+            </li>                    
+            </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal-leaderboard" id="modal-leaderboard" tabindex="-1" role="dialog">
+    <div class="modal" id="modal-leaderboard">
+        <button class="close-btn-leaderboard" id="close"><i class="fa fa-times"></i></button>
+        <div class="modal-content">
+            <div class="header">
+                <div class="col mobile-template mobile-template-bottom">
+                    <ul>   
+                    <h4>Leader Board:</h4>
+                    
+                    <ul id="topFifteen"></ul>
+                    </ul> 
+            </li>   
+            <li id="no-style-button"><button class="btn btn-primary btn-left modal_button_leaderboard" id= "modal_button_leaderboard"  type="submit">Close</button>
             </li>                    
             </ul>
             </div>
