added top 20 list in the modal

--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@
                     <ul>   
                     <h4>Leader Board:</h4>
                     
-                    <ul id="topFifteen"></ul>
+                    <ol id="topFifteen"></ol>
                     </ul> 
-            </li>   
+                </div>
+            </div>
+            <div>
             <li id="no-style-button"><button class="btn btn-primary btn-left modal_button_leaderboard" id= "modal_button_leaderboard"  type="submit">Close</button>
             </li>                    
             </ul>
