mute button on mobile has no hover, only active to has transformation and transition

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     
         <ul>
         <h4>Player:</h4>
-        <h4 id="testingUpdate">Anonymus</h4>
+        <h5 id="testingUpdate">Anon</h5>
         </ul>
         <ul>
-        <h5>Mute/Unmute:</h5>
+        <h4>Mute:</h4>
         <h3><button id="mute" class="unmuted" onclick="enableMute(), disableMute()" type="button"></button></h3>
     </ul>
     </div>
@@ -107,7 +107,7 @@
                         <div class="form-group">
                             <label for="exampleFormControlSelect2"><a id="choose_player"></a>Choose a player:</label>
                             <select class="form-control" onchange="chosePlayer()" id="exampleFormControlSelect1" > 
-                                <option>Anonymus</option>                                                          
+                                <option>Anon</option>                                                          
                               </select>
                           </div>
                         <div class="form-group name_form">
