--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <ul>
             <li><button class="btn btn-primary btn-right btnRules" type="submit"><a id="link" href="#element_target"></a>Rules</button></li>
             <li><button class="btn btn-primary btn-right btnChoossPlayer" >Choose a player</button></li>
-            <li><button class="btn btn-primary btn-right btnLeaderboard" type="submit">Leaderboard</button></li>
+            <li><button class="btn btn-primary btn-right btnLeaderboard" type="submit"><a id="link" href="#topTwenty_target"></a>Leaderboard</button></li>
             </ul>
     </div>
     
@@ -154,7 +154,7 @@
 </div>
 <div class="modal-leaderboard" id="modal-leaderboard" style="display:none;" tabindex="-1" role="dialog">
     <div class="modal" id="modal-leaderboard">
-        <button class="close-btn-leaderboard" id="close"><i class="fa fa-times"></i></button>
+        <button class="close-btn-leaderboard" id="close topTwenty_target"><i class="fa fa-times"></i></button>
         <div class="modal-content">
             <div class="header">
                 <div class="col mobile-template mobile-template-bottom align-text-center">
