fixed not opening modal as top Twenty leaderboard issue, it was missing one closing div

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <li id="no-style-button"><button class="btn btn-primary btn-left " id= "modal_button_rules"  type="submit">Close</button>
             </li>                    
             
-            
+            </div>  
         </div>
     </div>
 </div>
